BottomNav component bug squashed

--- a/src/Components/navigation/_BottomNavMobile.scss
+++ b/src/Components/navigation/_BottomNavMobile.scss
@@ -29,8 +29,5 @@
             background-color: $nav_background;
             width: 100vw;
         }
-        .closeNav {
-            display: none;
-        }
     }
 }
